--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="https://expresstoday.info"" class="nav-link">Home</a>
             </li>
             <li class="nav-item active">
-              <a href="about.html" class="nav-link">About</a>
+              <a href="index.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
               <a href="./html/services.html" class="nav-link">Services</a>
