--- a/html/services.html
+++ b/html/services.html
@@ -31,7 +31,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
       <div class="container">
-        <a href="index.html" class="navbar-brand">Express <span class="text-primary">Today</span></a>
+        <a href="https://expresstoday.info" class="navbar-brand">Express <span class="text-primary">Today</span></a>
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
               <a href="https://expresstoday.info" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="../about.html" class="nav-link">About</a>
+              <a href="../index.html" class="nav-link">About</a>
             </li>
             <li class="nav-item active">
               <a href="services.html" class="nav-link">Services</a>
