--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="icon" href="../assets/img/icon.png" type="image/x-icon">
+  <link rel="icon" href="./assets/img/icon.png" type="image/x-icon">
 
-  <meta name="copyright" content="MACode ID, https://macodeid.com">
+  <meta name="copyright" content="">
 
   <title>About - Express Today</title>
 
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="./assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
 
-  <link rel="stylesheet" href="../assets/css/maicons.css">
+  <link rel="stylesheet" href="./assets/css/maicons.css">
 
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.css">
+  <link rel="stylesheet" href="./assets/vendor/owl-carousel/css/owl.carousel.css">
 
-  <link rel="stylesheet" href="../assets/css/theme.css">
+  <link rel="stylesheet" href="./assets/css/theme.css">
 
 </head>
 <body>
